# ai-globals

./: .aider.conf.yml  .aiignore  .dockerignore  .gitignore  .graphifyignore  AGENTS.md  CHANGELOG-archive.md  CHANGELOG.md  CHEAT_SHEET.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  GRAPH_REPORT.md  IMPROVEMENT_PLAN.md  MAINTENANCE_PROMPT.md  MEMORY-archive.md  MEMORY.md  Memory.md  README-AR.md  README.md  SECURITY.md  cli.py  config.py  docker-compose.yml  global-roles-ar.md  global-roles.md  global-workflow.md  implementation_plan.md  install.ps1  install.sh  manifest.json  monthely-maintenance-prompt.md  monthly-maintenance-prompt.md  plugins.yaml  pyproject.toml  update-me.md  useful-repos.md
.ai/: active-context.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  coder.md  ponytail.md  reviewer.md  security.md
.clinerules/: ai-global-os.md
.cursor/rules/: ai-global-os.mdc  git.mdc  graphify.mdc  mcp.mdc  memory.mdc  quality.mdc  security.mdc  tech-stack.mdc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tech_stack_request.md
.github/workflows/: ci.yml  graphify.yml  validate.yml
aios_mcp/: __init__.py  aios_server.py  config.json
dashboard/: index.css  index.html  server.py
eval/: harness.py
memory/: __init__.py  ingest.py  store.py  vector.py
memory/tests/: test_ingest.py  test_store.py  test_vector.py
min/rules/: README.min  ai-integration-standards.min  anti-patterns.min  core-behavioral-compact.min  llm-behavioral-guidelines.min  principal-architect.min  spec-cache.min
min/skills/: ai-agents-architect.min  backend-api-expert.min  brainstorming.min  clean-code-guard.min  (+17 more)
rules/: EXAMPLES.md  README.md  ai-integration-standards.md  anti-patterns.md  api-integration-standards.md  caching-standards.md  ci-cd-standards.md  code-quality.md  core-behavioral-compact.md  database-scaling.md  devops-standards.md  env-management-standards.md  environment-windows.md  frontend-state-standards.md  git-standards.md  llm-behavioral-guidelines.md  observability-standards.md  performance-standards.md  persistent-state-execution.md  principal-architect.md  prompt-master-templates.md  saas-standards.md  security-standards.md  spec-cache.md  testing-standards.md  ui-ux-enforcement.md  vocabulary.md
runtime/: __init__.py  audit.py  budget.py  chat.py  ci.py  kernel.py  mcp_client.py  metrics.py  orchestrator.py  persona.py  plugin.py  policy.py  saga.py  schemas.py  tech_stack.py  telemetry.py  workflow.py
scripts/: README.md  ai_memory_engine.py  apply-zenmux-cursor-model.ps1  build-context.ps1  fetch-free-keys.py  get-uncompiled.ps1  graphify_mcp_wrapper.py  ingest-community-skill.ps1  requirements-memory.txt  run-opencode-free.cmd  run-opencode-free.ps1  sync-agent-configs.py  sync-env.php  validate-globals.ps1  validate-globals.py
skills/: ai-agents-architect.md  backend-api-expert.md  brainstorming.md  browser-extension-builder.md  clean-code-guard.md  context-compressor.md  docs-guard.md  frontend-ui-expert.md  fullstack-optimizer.md  graphify.md  prompt-master-patterns.md  prompt-master-templates.md  qa-debugger.md  security-auditor.md  seo-content-generator.md  subagent-driven-development.md  test-driven-development.md  test-guard.md  vocabulary.md  wordpress-expert.md  writing-plans.md
state/: CHANGELOG-archive.md  CHANGELOG.md  IMPROVEMENT_PLAN.md  MEMORY-archive.md  MEMORY.md  active-context.md
tech-stack/: README.md  accessibility-standards.md  alpine-3.md  api-design-standards.md  api-integration-standards.md  aws-infrastructure.md  bilingual-mastery.md  caching-standards.md  clerk-auth.md  clickhouse-analytics.md  cloudflare-edge.md  database-scaling.md  design-foundations.md  docker-containers.md  environment-windows.md  filament-3.md  filament-4.md  filament-5.md  filament-shield.md  framer-motion.md  frontend-design.md  frontend-modern.md  frontend-state-standards.md  frontend-ui.md  github-actions-ci.md  laravel-11.md  laravel-12.md  laravel-13.md  laravel-ai.md  laravel-boost.md  laravel-horizon.md  laravel-octane.md  laravel-reverb.md  livewire-3.md  meilisearch.md  mysql-8-3.md  mysql-8-4.md  mysql-9-7.md  nextjs-15.md  nodejs-22.md  (+35 more)
tests/: conftest.py  test_cli.py
workflows/: 00-prompt-architecting.md  01-planning.md  02-execution.md  03-debugging.md  04-deployment.md  05-code-review.md  06-maintenance.md  07-security-audit.md  08-onboarding.md  09-discovery.md  09-memory-sync.md  10-saga-reconciliation.md  11-audit-core.md  12-audit-ui.md  13-audit-perf.md  14-ponytail-review.md  README.md  cheat-sheet.md  ci-cd-standards.md  code-quality.md  commands-reference.md  devops-standards.md  git-standards.md  monthly-maintenance.md  observability-standards.md  performance-standards.md  security-standards.md  testing-standards.md  update-me.md
(+153 files in other folders)
